--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "test": "jest /src/public/javascripts/utils/html --colors --watch"
+    "dev": "parcel ./src/index.html",
+    "test": "jest /src/public/javascripts/utils/html --colors"
   },
   "dependencies": {
     "babel-install": "^2.1.0",
@@ -16,6 +16,7 @@
     "mongoose": "^5.6.4",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.1",
+    "parcel": "^1.12.3",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
