--- a/package.json
+++ b/package.json
@@ -23,5 +23,7 @@
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "babel-jest": "^24.8.0"
-  }
+  },
+  "proxy": "http://localhost:3000"
+
 }
